@@ -1,5 +1,9 @@
 2013-05-16  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
+	* src/qt4/action_sequence_selector.cpp:
+	* src/qt4/action_sequence_selector.h:
+	- 文字列によるフィルタ機能を追加．文字列はスペース区切りでAND検索
+
 	* src/qt4/debug_message_window.cpp:
 	- 起動時に自動的に右サイドの1番が選択されてしまうバグを修正
 
